[feat] 사용자 프로필 조회 API 구현 (#374)
* docs: 사용자 프로필 조회 API 명세 추가

* test: 사용자 프로필 조회 계약 검증 추가

* feat: 사용자 프로필 조회 API 구현

* docs: 사용자 프로필 조회 API 상태를 review로 변경

* docs: 사용자 프로필 조회 API 상태를 done 변경
